# tuci

./: Cargo.toml  tuci.toml.example
src/: app.rs  config.rs  fen.rs  main.rs  process_priority.rs  terminal.rs  uci.rs  ui.rs
